--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,10 @@
 version: '3.4'
 
 services:
-  rails-react:
+  app:
     image: rails-react
     build: .
     ports:
-      - 3000
+      - 3000:3000
+    volumes:
+      - ./app:/app
